Fixes issue of overlay covering controls when the video is paused.

--- a/src/videojs.ima.css
+++ b/src/videojs.ima.css
@@ -34,6 +34,10 @@
   margin-top: -40px;
 }
 
+.video-js.vjs-paused .bumpable-ima-ad-container {
+  margin-top: -40px;
+}
+
 #ima-controls-div {
   bottom:0px;
   height: 37px;
